--- a/public/index.html
+++ b/public/index.html
@@ -173,6 +173,7 @@ body {
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  position: relative;
 }
 /* Chat Header */
 .chat-header {
@@ -183,6 +184,7 @@ body {
   align-items: center;
   background: var(--bg-secondary);
   position: relative;
+  z-index: 5;
 }
 .chat-title {
   font-size: 16px;
@@ -224,6 +226,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  padding-bottom: 100px; /* Space for input area */
 }
 .chat-container::-webkit-scrollbar {
   width: 8px;
@@ -472,12 +475,14 @@ body {
 .code-content {
   padding: 12px;
   overflow-x: auto;
+  min-height: 60px; /* Ensure minimum height for visibility */
 }
 .code-content pre {
   margin: 0;
   font-family: 'Consolas', 'Monaco', 'Courier New', monospace;
   font-size: 14px;
   line-height: 1.5;
+  color: var(--text-primary); /* Ensure text color is visible */
 }
 .message-text code {
   background: var(--bg-primary);
@@ -485,6 +490,7 @@ body {
   border-radius: 4px;
   font-family: 'Courier New', monospace;
   font-size: 14px;
+  color: var(--text-primary); /* Ensure inline code is visible */
 }
 
 /* Code Preview Container */
@@ -592,6 +598,12 @@ body {
   padding: 24px;
   background: var(--bg-secondary);
   border-top: 1px solid var(--border);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
 }
 .input-container {
   max-width: 800px;
@@ -969,10 +981,12 @@ body {
 
   .chat-container {
     padding: 16px;
+    padding-bottom: 120px; /* More space for fixed input area on mobile */
   }
   
   .input-area {
     padding: 16px;
+    /* Already fixed at bottom */
   }
   
   .welcome-title {
@@ -1009,6 +1023,7 @@ body {
   .code-content {
     padding: 8px;
     font-size: 13px;
+    min-height: 50px; /* Ensure minimum height on mobile */
   }
   
   .input-field {
@@ -2096,5 +2111,5 @@ async function regenerateResponse(messageIndex) {
   sendMessage();
 }
 </script>
-</body>
+</body> 
 </html>
