--- a/public/index.html
+++ b/public/index.html
@@ -667,13 +667,14 @@
         .chat-message-text {
             font-size: 16px;
             line-height: 1.7;
-            color: var(--text-primary);
+            color: #FFFFFF !important; /* Explicitly set to white */
             white-space: pre-wrap;
             word-wrap: break-word;
         }
         
         .chat-message-text p {
             margin-bottom: 16px;
+            color: #FFFFFF !important; /* Explicitly set to white */
         }
         
         .chat-message-text p:last-child {
