--- a/public/index.html
+++ b/public/index.html
@@ -5696,8 +5696,7 @@
                 const response = await fetch('/api/chat', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': `Bearer ${state.settings.apiKey}`
+                        'Content-Type': 'application/json'
                     },
                     body: JSON.stringify(request)
                 });
